fixing budget